Exception需要改成Throwable，因为产生的Error，不会被Execption caught住，而无法打印下面的i