@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 //-Xms10m -Xmx10m -XX:MaxDirectMemorySize=5m -XX:+PrintGCDetails
+//加上启动参数：-Xms10m -Xmx10m -XX:+PrintGCDetails -XX:MaxDirectMemorySize=5M
 public class GCOverheadDemo {
     public static void main(String[] args) {
         int i = 0;
@@ -12,8 +13,8 @@ public class GCOverheadDemo {
             while (true) {
                 list.add(String.valueOf(++i).intern());
             }
-        } catch (Exception e) {
-            System.out.println("************i" + i);
+        } catch (Throwable e) {
+            System.out.println("************i=" + i);
             e.printStackTrace();
             throw e;
         }
